2008-05-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8360: locallang.xml charset convertion dont work for LOCAL_LANG['default']

2008-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8351: RTE.classes configuration not honoured by htmlArea RTE Insert/modify link class selector

2008-05-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8330: Missing padding in select lists without icons (thanks to Uschi Renziehausen)
	* Fixed bug #8187: Cache Menu has problems with long names (german) (thanks to Steffen Kamper)

2008-05-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Follow up on RFC: #7612 (cannot clear extension's FE cache from Backend) (by Oliver Klee)

2008-05-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4022, #4060: TCAdefaults for MM-Fields did't work (patch by Bernhard Kraft)

2008-04-29  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8272: Listview - warning icon goes to new line in iconblock (thanks to Steffen Kamper)

2008-04-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8265: no links in htmlmails (thanks to Ralf Hettinger)

2008-04-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8254: htmlArea RTE sets invalid link to file selected using DAM media browser. Thanks to Xavier Perseguers.

2008-04-26  Ingo Renner  <ingo@typo3.org>

	* Removed redundant files from t3editor

2008-04-23  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0
	* Fixed a bug where Webkit Browsers would not correctly display the icons in the dropdown type selector of records like pages and content elements, credits Jeff Segars
	* Fixed Bug #8207: Creating shortcuts in backend.php does not work in modules other than web->list or file->filelist
	* Added login image for TYPO3 4.2
	* Update all ext_emconf.php in system extensions (part 2)

2008-04-23  Michael Stucki  <michael@typo3.org>

	* Remove obsolete warning in Extension Manager
	* Update all ext_emconf.php in system extensions (part 1)