@@ -10,24 +10,24 @@ CREATE TABLE be_groups (
   pid int(11) unsigned DEFAULT '0' NOT NULL,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   title varchar(50) DEFAULT '' NOT NULL,
-  non_exclude_fields text NOT NULL,
-  explicit_allowdeny text NOT NULL,
+  non_exclude_fields text,
+  explicit_allowdeny text,
   allowed_languages varchar(255) DEFAULT '' NOT NULL,
-  custom_options text NOT NULL,
+  custom_options text,
   db_mountpoints varchar(255) DEFAULT '' NOT NULL,
   pagetypes_select varchar(255) DEFAULT '' NOT NULL,
-  tables_select text NOT NULL,
-  tables_modify text NOT NULL,
+  tables_select text,
+  tables_modify text,
   crdate int(11) unsigned DEFAULT '0' NOT NULL,
   cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
-  groupMods text NOT NULL,
+  groupMods text,
   file_mountpoints varchar(255) DEFAULT '' NOT NULL,
   hidden tinyint(1) unsigned DEFAULT '0' NOT NULL,
   inc_access_lists tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  description text NOT NULL,
+  description text,
   lockToDomain varchar(50) DEFAULT '' NOT NULL,
   deleted tinyint(1) unsigned DEFAULT '0' NOT NULL,
-  TSconfig text NOT NULL,
+  TSconfig text,
   subgroup varchar(255) DEFAULT '' NOT NULL,
   hide_in_lists tinyint(4) DEFAULT '0' NOT NULL,
   workspace_perms tinyint(3) DEFAULT '1' NOT NULL,
@@ -45,7 +45,7 @@ CREATE TABLE be_sessions (
   ses_hashlock int(11) DEFAULT '0' NOT NULL,
   ses_userid int(11) unsigned DEFAULT '0' NOT NULL,
   ses_tstamp int(11) unsigned DEFAULT '0' NOT NULL,
-  ses_data longtext NOT NULL,
+  ses_data longtext,
   ses_backuserid int(11) NOT NULL default '0',
   PRIMARY KEY (ses_id,ses_name)
 );
@@ -73,14 +73,14 @@ CREATE TABLE be_users (
   realName varchar(80) DEFAULT '' NOT NULL,
   userMods varchar(255) DEFAULT '' NOT NULL,
   allowed_languages varchar(255) DEFAULT '' NOT NULL,
-  uc text NOT NULL,
+  uc text,
   file_mountpoints varchar(255) DEFAULT '' NOT NULL,
   fileoper_perms tinyint(4) DEFAULT '0' NOT NULL,
   workspace_perms tinyint(3) DEFAULT '1' NOT NULL,
   lockToDomain varchar(50) DEFAULT '' NOT NULL,
   disableIPlock tinyint(1) unsigned DEFAULT '0' NOT NULL,
   deleted tinyint(1) unsigned DEFAULT '0' NOT NULL,
-  TSconfig text NOT NULL,
+  TSconfig text,
   lastlogin int(10) unsigned DEFAULT '0' NOT NULL,
   createdByAction int(11) DEFAULT '0' NOT NULL,
   usergroup_cached_list varchar(255) DEFAULT '' NOT NULL,
@@ -100,17 +100,17 @@ CREATE TABLE cache_extensions (
   alldownloadcounter int(11) unsigned NOT NULL default '0',
   downloadcounter int(11) unsigned NOT NULL default '0',
   title varchar(150) NOT NULL default '',
-  description mediumtext NOT NULL,
+  description mediumtext,
   state int(4) NOT NULL default '0',
   reviewstate int(4) NOT NULL default '0',
   category int(4) NOT NULL default '0',
   lastuploaddate int(11) unsigned NOT NULL default '0',
-  dependencies mediumtext NOT NULL,
+  dependencies mediumtext,
   authorname varchar(100) NOT NULL default '',
   authoremail varchar(100) NOT NULL default '',
   ownerusername varchar(50) NOT NULL default '',
   t3xfilemd5 varchar(35) NOT NULL default '',
-  uploadcomment mediumtext NOT NULL,
+  uploadcomment mediumtext,
   authorcompany varchar(100) NOT NULL default '',
   intversion int(11) NOT NULL default '0',
   lastversion int(3) NOT NULL default '0',
@@ -123,7 +123,7 @@ CREATE TABLE cache_extensions (
 #
 CREATE TABLE cache_hash (
   hash varchar(32) DEFAULT '' NOT NULL,
-  content mediumblob NOT NULL,
+  content mediumblob,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   ident varchar(20) DEFAULT '' NOT NULL,
   PRIMARY KEY (hash)
@@ -172,7 +172,7 @@ CREATE TABLE pages (
   cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
   title varchar(255) DEFAULT '' NOT NULL,
   doktype tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  TSconfig text NOT NULL,
+  TSconfig text,
   storage_pid int(11) DEFAULT '0' NOT NULL,
   is_siteroot tinyint(4) DEFAULT '0' NOT NULL,
   php_tree_stop tinyint(4) DEFAULT '0' NOT NULL,
@@ -189,7 +189,7 @@ CREATE TABLE sys_be_shortcuts (
   uid int(11) unsigned NOT NULL auto_increment,
   userid int(11) unsigned DEFAULT '0' NOT NULL,
   module_name varchar(255) DEFAULT '' NOT NULL,
-  url text NOT NULL,
+  url text,
   description varchar(255) DEFAULT '' NOT NULL,
   sorting int(11) DEFAULT '0' NOT NULL,
   sc_group tinyint(4) DEFAULT '0' NOT NULL,
@@ -205,7 +205,7 @@ CREATE TABLE sys_preview (
   keyword varchar(32) DEFAULT '' NOT NULL,
   tstamp int(11) DEFAULT '0' NOT NULL,
   endtime int(11) DEFAULT '0' NOT NULL,
-  config text NOT NULL,
+  config text,
   PRIMARY KEY (keyword)
 );
 
@@ -237,8 +237,8 @@ CREATE TABLE sys_workspace (
   title varchar(30) DEFAULT '' NOT NULL,
   description varchar(255) DEFAULT '' NOT NULL,
   adminusers varchar(255) DEFAULT '' NOT NULL,
-  members text NOT NULL,
-  reviewers text NOT NULL,
+  members text,
+  reviewers text,
   db_mountpoints varchar(255) DEFAULT '' NOT NULL,
   file_mountpoints varchar(255) DEFAULT '' NOT NULL,
   publish_time int(11) DEFAULT '0' NOT NULL,
@@ -262,12 +262,12 @@ CREATE TABLE sys_workspace (
 CREATE TABLE sys_history (
   uid int(11) unsigned NOT NULL auto_increment,
   sys_log_uid int(11) DEFAULT '0' NOT NULL,
-  history_data mediumtext NOT NULL,
-  fieldlist text NOT NULL,
+  history_data mediumtext,
+  fieldlist text,
   recuid int(11) DEFAULT '0' NOT NULL,
   tablename varchar(40) DEFAULT '' NOT NULL,
   tstamp int(11) DEFAULT '0' NOT NULL,
-  history_files mediumtext NOT NULL,
+  history_files mediumtext,
   snapshot tinyint(4) DEFAULT '0' NOT NULL,
   PRIMARY KEY (uid),
   KEY recordident (tablename,recuid,tstamp),
@@ -380,4 +380,3 @@ CREATE TABLE sys_language (
   PRIMARY KEY (uid),
   KEY parent (pid)
 );
-
