@@ -11,11 +11,11 @@ CREATE TABLE cache_pages (
   hash varchar(32) DEFAULT '' NOT NULL,
   page_id int(11) unsigned DEFAULT '0' NOT NULL,
   reg1 int(11) unsigned DEFAULT '0' NOT NULL,
-  HTML mediumtext NOT NULL,
+  HTML mediumtext,
   temp_content int(1) DEFAULT '0' NOT NULL,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   expires int(10) unsigned DEFAULT '0' NOT NULL,
-  cache_data mediumblob NOT NULL,
+  cache_data mediumblob,
   KEY page_id (page_id),
   KEY sel (hash,page_id),
   PRIMARY KEY (id)
@@ -28,7 +28,7 @@ CREATE TABLE cache_pages (
 CREATE TABLE cache_pagesection (
   page_id int(11) unsigned DEFAULT '0' NOT NULL,
   mpvar_hash int(11) unsigned DEFAULT '0' NOT NULL,
-  content blob NOT NULL,
+  content blob,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   PRIMARY KEY (page_id,mpvar_hash)
 ) ENGINE=InnoDB;
@@ -53,7 +53,7 @@ CREATE TABLE cache_md5params (
   md5hash varchar(20) DEFAULT '' NOT NULL,
   tstamp int(11) DEFAULT '0' NOT NULL,
   type tinyint(3) DEFAULT '0' NOT NULL,
-  params text NOT NULL,
+  params text,
   PRIMARY KEY (md5hash)
 ) ENGINE=InnoDB;
 
@@ -85,9 +85,9 @@ CREATE TABLE fe_groups (
   hidden tinyint(3) unsigned DEFAULT '0' NOT NULL,
   lockToDomain varchar(50) DEFAULT '' NOT NULL,
   deleted tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  description text NOT NULL,
-  subgroup tinytext NOT NULL,
-  TSconfig text NOT NULL,
+  description text,
+  subgroup tinytext,
+  TSconfig text,
   PRIMARY KEY (uid),
   KEY parent (pid)
 );
@@ -98,7 +98,7 @@ CREATE TABLE fe_groups (
 #
 CREATE TABLE fe_session_data (
   hash varchar(32) DEFAULT '' NOT NULL,
-  content mediumblob NOT NULL,
+  content mediumblob,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   PRIMARY KEY (hash)
 ) ENGINE=InnoDB;
@@ -114,7 +114,7 @@ CREATE TABLE fe_sessions (
   ses_hashlock int(11) DEFAULT '0' NOT NULL,
   ses_userid int(11) unsigned DEFAULT '0' NOT NULL,
   ses_tstamp int(11) unsigned DEFAULT '0' NOT NULL,
-  ses_data blob NOT NULL,
+  ses_data blob,
   ses_permanent tinyint(1) unsigned DEFAULT '0' NOT NULL,
   PRIMARY KEY (ses_id,ses_name)
 ) ENGINE=InnoDB;
@@ -129,7 +129,7 @@ CREATE TABLE fe_users (
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   username varchar(50) DEFAULT '' NOT NULL,
   password varchar(40) DEFAULT '' NOT NULL,
-  usergroup tinytext NOT NULL,
+  usergroup tinytext,
   disable tinyint(4) unsigned DEFAULT '0' NOT NULL,
   starttime int(11) unsigned DEFAULT '0' NOT NULL,
   endtime int(11) unsigned DEFAULT '0' NOT NULL,
@@ -142,15 +142,15 @@ CREATE TABLE fe_users (
   cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
   lockToDomain varchar(50) DEFAULT '' NOT NULL,
   deleted tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  uc blob NOT NULL,
+  uc blob,
   title varchar(40) DEFAULT '' NOT NULL,
   zip varchar(10) DEFAULT '' NOT NULL,
   city varchar(50) DEFAULT '' NOT NULL,
   country varchar(40) DEFAULT '' NOT NULL,
   www varchar(80) DEFAULT '' NOT NULL,
   company varchar(80) DEFAULT '' NOT NULL,
-  image tinytext NOT NULL,
-  TSconfig text NOT NULL,
+  image tinytext,
+  TSconfig text,
   fe_cruser_id int(10) unsigned DEFAULT '0' NOT NULL,
   lastlogin int(10) unsigned DEFAULT '0' NOT NULL,
   is_online int(10) unsigned DEFAULT '0' NOT NULL,
@@ -187,14 +187,14 @@ CREATE TABLE pages_language_overlay (
   deleted tinyint(3) unsigned DEFAULT '0' NOT NULL,
   subtitle varchar(255) DEFAULT '' NOT NULL,
   nav_title varchar(255) DEFAULT '' NOT NULL,
-  media tinytext NOT NULL,
-  keywords text NOT NULL,
-  description text NOT NULL,
-  abstract text NOT NULL,
+  media tinytext,
+  keywords text,
+  description text,
+  abstract text,
   author varchar(255) DEFAULT '' NOT NULL,
   author_email varchar(80) DEFAULT '' NOT NULL,
   tx_impexp_origuid int(11) DEFAULT '0' NOT NULL,
-  l18n_diffsource mediumblob NOT NULL,
+  l18n_diffsource mediumblob,
 
   PRIMARY KEY (uid),
   KEY t3ver_oid (t3ver_oid,t3ver_wsid),
@@ -211,11 +211,11 @@ CREATE TABLE static_template (
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   crdate int(11) unsigned DEFAULT '0' NOT NULL,
   title varchar(255) DEFAULT '' NOT NULL,
-  include_static tinytext NOT NULL,
-  constants text NOT NULL,
-  config text NOT NULL,
-  editorcfg text NOT NULL,
-  description text NOT NULL,
+  include_static tinytext,
+  constants text,
+  config text,
+  editorcfg text,
+  description text,
   PRIMARY KEY (uid),
   KEY parent (pid)
 );
@@ -268,15 +268,15 @@ CREATE TABLE sys_template (
   endtime int(11) unsigned DEFAULT '0' NOT NULL,
   root tinyint(4) unsigned DEFAULT '0' NOT NULL,
   clear tinyint(4) unsigned DEFAULT '0' NOT NULL,
-  include_static tinytext NOT NULL,
-  include_static_file text NOT NULL,
-  constants text NOT NULL,
-  config text NOT NULL,
-  editorcfg text NOT NULL,
-  resources text NOT NULL,
+  include_static tinytext,
+  include_static_file text,
+  constants text,
+  config text,
+  editorcfg text,
+  resources text,
   nextLevel varchar(5) DEFAULT '' NOT NULL,
-  description text NOT NULL,
-  basedOn tinytext NOT NULL,
+  description text,
+  basedOn tinytext,
   deleted tinyint(3) unsigned DEFAULT '0' NOT NULL,
   includeStaticAfterBasedOn tinyint(4) unsigned DEFAULT '0' NOT NULL,
   static_file_mode tinyint(4) unsigned DEFAULT '0' NOT NULL,
@@ -311,19 +311,19 @@ CREATE TABLE tt_content (
   CType varchar(30) DEFAULT '' NOT NULL,
   header varchar(255) DEFAULT '' NOT NULL,
   header_position varchar(6) DEFAULT '' NOT NULL,
-  bodytext mediumtext NOT NULL,
-  image text NOT NULL,
+  bodytext mediumtext,
+  image text,
   imagewidth mediumint(11) unsigned DEFAULT '0' NOT NULL,
   imageorient tinyint(4) unsigned DEFAULT '0' NOT NULL,
-  imagecaption text NOT NULL,
+  imagecaption text,
   imagecols tinyint(4) unsigned DEFAULT '0' NOT NULL,
   imageborder tinyint(4) unsigned DEFAULT '0' NOT NULL,
-  media text NOT NULL,
+  media text,
   layout tinyint(3) unsigned DEFAULT '0' NOT NULL,
   deleted tinyint(4) unsigned DEFAULT '0' NOT NULL,
   cols tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  records text NOT NULL,
-  pages tinytext NOT NULL,
+  records text,
+  pages tinytext,
   starttime int(11) unsigned DEFAULT '0' NOT NULL,
   endtime int(11) unsigned DEFAULT '0' NOT NULL,
   colPos tinyint(3) unsigned DEFAULT '0' NOT NULL,
@@ -338,9 +338,9 @@ CREATE TABLE tt_content (
   image_noRows tinyint(3) unsigned DEFAULT '0' NOT NULL,
   image_effects tinyint(3) unsigned DEFAULT '0' NOT NULL,
   image_compression tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  altText text NOT NULL,
-  titleText text NOT NULL,
-  longdescURL text NOT NULL,
+  altText text,
+  titleText text,
+  longdescURL text,
   header_layout varchar(30) DEFAULT '0' NOT NULL,
   text_align varchar(6) DEFAULT '' NOT NULL,
   text_face tinyint(3) unsigned DEFAULT '0' NOT NULL,
@@ -360,16 +360,16 @@ CREATE TABLE tt_content (
   section_frame tinyint(3) unsigned DEFAULT '0' NOT NULL,
   date int(10) unsigned DEFAULT '0' NOT NULL,
   splash_layout varchar(30) DEFAULT '0' NOT NULL,
-  multimedia tinytext NOT NULL,
+  multimedia tinytext,
   image_frames tinyint(3) unsigned DEFAULT '0' NOT NULL,
   recursive tinyint(3) unsigned DEFAULT '0' NOT NULL,
   imageheight mediumint(8) unsigned DEFAULT '0' NOT NULL,
   rte_enabled tinyint(4) DEFAULT '0' NOT NULL,
   sys_language_uid int(11) DEFAULT '0' NOT NULL,
   tx_impexp_origuid int(11) DEFAULT '0' NOT NULL,
-  pi_flexform mediumtext NOT NULL,
+  pi_flexform mediumtext,
   l18n_parent int(11) DEFAULT '0' NOT NULL,
-  l18n_diffsource mediumblob NOT NULL,
+  l18n_diffsource mediumblob,
 
   PRIMARY KEY (uid),
   KEY t3ver_oid (t3ver_oid,t3ver_wsid),
@@ -393,15 +393,15 @@ CREATE TABLE pages (
   subtitle varchar(255) DEFAULT '' NOT NULL,
   layout tinyint(3) unsigned DEFAULT '0' NOT NULL,
   target varchar(20) DEFAULT '' NOT NULL,
-  media text NOT NULL,
+  media text,
   lastUpdated int(10) unsigned DEFAULT '0' NOT NULL,
-  keywords text NOT NULL,
+  keywords text,
   cache_timeout int(10) unsigned DEFAULT '0' NOT NULL,
   newUntil int(10) unsigned DEFAULT '0' NOT NULL,
-  description text NOT NULL,
+  description text,
   no_search tinyint(3) unsigned DEFAULT '0' NOT NULL,
   SYS_LASTCHANGED int(10) unsigned DEFAULT '0' NOT NULL,
-  abstract text NOT NULL,
+  abstract text,
   module varchar(10) DEFAULT '' NOT NULL,
   extendToSubpages tinyint(3) unsigned DEFAULT '0' NOT NULL,
   author varchar(255) DEFAULT '' NOT NULL,
