@@ -8,7 +8,7 @@ CREATE TABLE tx_impexp_presets (
   title varchar(255) DEFAULT '' NOT NULL,
   public tinyint(3) DEFAULT '0' NOT NULL,
   item_uid int(11) DEFAULT '0' NOT NULL,
-  preset_data blob NOT NULL,
+  preset_data blob,
   PRIMARY KEY (uid),
   KEY lookup (item_uid)
 );
