@@ -9,18 +9,18 @@ CREATE TABLE sys_action (
   cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
   sorting int(10) DEFAULT '0' NOT NULL,
   title varchar(255) DEFAULT '' NOT NULL,
-  description text NOT NULL,
+  description text,
   type tinyint(3) unsigned DEFAULT '0' NOT NULL,
   t1_userprefix varchar(20) DEFAULT '' NOT NULL,
   t1_copy_of_user int(11) DEFAULT '0' NOT NULL,
-  t1_allowed_groups tinytext NOT NULL,
-  t2_data blob NOT NULL,
+  t1_allowed_groups tinytext,
+  t2_data blob,
   assign_to_groups int(11) DEFAULT '0' NOT NULL,
   hidden tinyint(4) DEFAULT '0' NOT NULL,
   t1_create_user_dir tinyint(4) DEFAULT '0' NOT NULL,
   t3_listPid int(11) DEFAULT '0' NOT NULL,
   t3_tables varchar(40) DEFAULT '' NOT NULL,
-  t4_recordsToEdit text NOT NULL,
+  t4_recordsToEdit text,
 
   PRIMARY KEY (uid),
   KEY cruser_id (cruser_id),
